add_executable(EventLoop_test EventLoop_test.cpp)
target_link_libraries(EventLoop_test net)

add_executable(Reactor02_test Reactor02_test.cpp)
target_link_libraries(Reactor02_test net)

add_executable(Socket_test Socket_test.cpp)
target_link_libraries(Socket_test net)

add_executable(Acceptor_test Acceptor_test.cpp)
target_link_libraries(Acceptor_test net)

# add_executable(TcpServer_test01_signleThread TcpServer_test01_signleThread.cpp)
# target_link_libraries(TcpServer_test01_signleThread net)

add_executable(TcpServer_test02_EventLoopThreadPool TcpServer_test02_EventLoopThreadPool.cpp)
target_link_libraries(TcpServer_test02_EventLoopThreadPool net)

add_executable(TcpServer_test03_Buffer_send TcpServer_test03_Buffer_send.cpp)
target_link_libraries(TcpServer_test03_Buffer_send net)

add_executable(TcpServer_test04_pollout_shutdown TcpServer_test04_pollout_shutdown.cpp)
target_link_libraries(TcpServer_test04_pollout_shutdown net)


add_executable(TcpServer_test_IGN_SIGPIPIE TcpServer_test_IGN_SIGPIPIE.cpp)
target_link_libraries(TcpServer_test_IGN_SIGPIPIE net)